versions/v3.6.0/doxygen/html/functions_e.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/functions_e.html
original_path: doxygen/html/functions_e.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all struct and union fields with links to the structures/unions they belong to:

### - e -

- e : [ft8xx\_touch\_transform](structft8xx__touch__transform.md#a8c31db728937a0b69f01b9c3e265287a)
- e\_ehsize : [elf32\_ehdr](structelf32__ehdr.md#a33698f57f4f73a4f7659633fc11114fb), [elf64\_ehdr](structelf64__ehdr.md#a7ee0e5959ca93262320c545a4ab11649)
- e\_entry : [elf32\_ehdr](structelf32__ehdr.md#a2322a1ac85ac7962cd05152588f8bf8f), [elf64\_ehdr](structelf64__ehdr.md#a26fa9b30280c40d71227cd8dc68cc042)
- e\_flags : [elf32\_ehdr](structelf32__ehdr.md#a1533636f5162a1f5a6e501a4129a5954), [elf64\_ehdr](structelf64__ehdr.md#a7bdfcb1ae2d8dc7b6ba95e24e7e72ba9)
- e\_ident : [elf32\_ehdr](structelf32__ehdr.md#acef0ea640d4fd75562b7412eaf8e2226), [elf64\_ehdr](structelf64__ehdr.md#acfc6d7c908c9a9864cca2eb0e5a2c023)
- e\_machine : [elf32\_ehdr](structelf32__ehdr.md#a09a134b6c6b711458673ddc8601af4c5), [elf64\_ehdr](structelf64__ehdr.md#ac1c3b8c0f2b01d0edf07c0e3d1d8220b)
- e\_phentsize : [elf32\_ehdr](structelf32__ehdr.md#a0deea8c06b17aff924a86adf23206dd7), [elf64\_ehdr](structelf64__ehdr.md#a688f9d25b4f2678f0e9a313a8c8cf074)
- e\_phnum : [elf32\_ehdr](structelf32__ehdr.md#a24ad42f294e548d54ff91ae9de5bb729), [elf64\_ehdr](structelf64__ehdr.md#a4a3b62575f891b59851b36f478e95c32)
- e\_phoff : [elf32\_ehdr](structelf32__ehdr.md#af25dd95c6c2b2e8aeecdfb130ed4bfc6), [elf64\_ehdr](structelf64__ehdr.md#ab41df1d736aabf7b810339d579e51663)
- e\_shentsize : [elf32\_ehdr](structelf32__ehdr.md#a2b8ae6d098c44146579dbe4c8e2d11c8), [elf64\_ehdr](structelf64__ehdr.md#a419a672788fb33eaffc5f7eb7c9f9acd)
- e\_shnum : [elf32\_ehdr](structelf32__ehdr.md#a5f795d38ed810bad582d88c35b474cbf), [elf64\_ehdr](structelf64__ehdr.md#ad46c9c2047e61617d5d52394e9c42d65)
- e\_shoff : [elf32\_ehdr](structelf32__ehdr.md#a085432a071a923e4fe1d3a4a3dfa665b), [elf64\_ehdr](structelf64__ehdr.md#a3566424cae4237c11dc781929e9d2396)
- e\_shstrndx : [elf32\_ehdr](structelf32__ehdr.md#a4537e3831f136b81a7a0d6260ad497a6), [elf64\_ehdr](structelf64__ehdr.md#a6214fd0ea2f0d3e8151a304d5c4302b2)
- e\_type : [elf32\_ehdr](structelf32__ehdr.md#ae26a4d5cc90917ec13689060695833e5), [elf64\_ehdr](structelf64__ehdr.md#aa30814b4908ab8f0008f8b6a68686127)
- e\_version : [elf32\_ehdr](structelf32__ehdr.md#a4f73aa6711f379fb70a483e99d47f108), [elf64\_ehdr](structelf64__ehdr.md#a8d406a8c636ad09b96af62001b9b1785)
- earfcn : [mdm\_hl7800\_site\_survey](structmdm__hl7800__site__survey.md#aa22e2191ac864718a097fa674dc1adc8)
- eax : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#ad60975255b667db74255d1a8534b759a), [nanoEsf](structnanoEsf.md#a1e72ac245fae9d8454ea572780fe6845), [task\_state\_segment](structtask__state__segment.md#aca6436062f7e47e63b364aa331498a9c)
- ebp : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#ac7ae28c665e573abbfcdafe07e5da473), [nanoEsf](structnanoEsf.md#a4a4c4ec64e8f01e8a6e3e14bde63aa8c), [task\_state\_segment](structtask__state__segment.md#a1b9505b29bba1d91c92457f898e29175)
- ebx : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#a61abfb0bf1858ae4cba3d72bd5f8d95d), [nanoEsf](structnanoEsf.md#afe46163b57c39529c3dce5284b0a7eb8), [task\_state\_segment](structtask__state__segment.md#a80e9653cc996ae57e33e263773493058)
- echo : [shell\_backend\_config\_flags](structshell__backend__config__flags.md#a5745ea5cab202ee446f460b980c5c532)
- ecx : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#ae23b76372e6aa71488427327240d078a), [nanoEsf](structnanoEsf.md#a4741e6bc706a7489fe2b45c34f7bdbb6), [task\_state\_segment](structtask__state__segment.md#a3bd54264357890c87cfc6ebf12ffa8eb)
- ed\_scan : [ieee802154\_radio\_api](structieee802154__radio__api.md#a01fc17f85f2be33877a9347f59a84c54)
- edi : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#a9bdc030dfe999ce4d2c5dacf999a8152), [nanoEsf](structnanoEsf.md#a483a384f835722c4c99a70e3c690e37a), [task\_state\_segment](structtask__state__segment.md#a305dc05c6ce45b06d5c08886fbc629d2)
- ediv : [bt\_hci\_cp\_le\_start\_encryption](structbt__hci__cp__le__start__encryption.md#a640d201bbfa6f6d8476be02d3656e847), [bt\_hci\_evt\_le\_ltk\_request](structbt__hci__evt__le__ltk__request.md#a54d5cbde249349337595085c6c3cabad)
- edx : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#a483bef7f8235e91ba450073dcdf9d6bb), [nanoEsf](structnanoEsf.md#a92a995abd01f4a5fd1a4f04a4e6400a4), [task\_state\_segment](structtask__state__segment.md#a36275826a694fb98a7e3d68253991eb3)
- efc : [can\_mcan\_tx\_buffer\_hdr](structcan__mcan__tx__buffer__hdr.md#a6f760970f0483dc16aa8ecc0715591d3)
- efec : [can\_mcan\_ext\_filter](structcan__mcan__ext__filter.md#a6a3042f7b236fb2d06334c4c5bc91530)
- effect : [bt\_mesh\_dfu\_metadata\_status](structbt__mesh__dfu__metadata__status.md#a299723f7176938b2900cfdae4550965c), [bt\_mesh\_dfu\_srv](structbt__mesh__dfu__srv.md#a5a8f467b0c49dc28b83088d25633f3ba), [bt\_mesh\_dfu\_target](structbt__mesh__dfu__target.md#a3d18d0ae1d0902cf84402b090a9aaa99), [bt\_mesh\_dfu\_target\_status](structbt__mesh__dfu__target__status.md#aef5cbadbdd7b4b006dc304cd94c1bca4)
- efi\_cr3 : [efi\_boot\_arg](structefi__boot__arg.md#a6164dd7a842052aaa6228dc8ee5b0c43)
- efi\_systab : [efi\_boot\_arg](structefi__boot__arg.md#a00fa2c3d95fa237f5874b7696a69de78)
- efid1 : [can\_mcan\_ext\_filter](structcan__mcan__ext__filter.md#a54b3ac39e57cb02136a5d1bf5af1c75b)
- efid2 : [can\_mcan\_ext\_filter](structcan__mcan__ext__filter.md#a12147937f9889e835cf89f5a99ab62d8)
- eflags : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#a248f18679b999bc4cf5438d729725a1e), [nanoEsf](structnanoEsf.md#acfb5ead961181e179f31f92393517420), [task\_state\_segment](structtask__state__segment.md#ab5e6713aa56576ebf4b4f15bff800993)
- eft : [can\_mcan\_ext\_filter](structcan__mcan__ext__filter.md#aa94145f8e7f7d8668f383f174f6420b8)
- eip : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#a4c77f1335eb4dfe2d54f2e3d2526af92), [nanoEsf](structnanoEsf.md#af1f3d43a394af43c49caf59a8bd384ab), [task\_state\_segment](structtask__state__segment.md#aa1992e03e583070d318adb554f28b8e8)
- eir : [bt\_br\_discovery\_result](structbt__br__discovery__result.md#a6bfe9a421257e2460eb9b4381252f9cc), [bt\_hci\_evt\_extended\_inquiry\_result](structbt__hci__evt__extended__inquiry__result.md#a1eba2841941f7cdbb00f548ebf0485e9)
- electric\_charge : [sensor\_q31\_data::sensor\_q31\_sample\_data](structsensor__q31__data_1_1sensor__q31__sample__data.md#aafb3c0aa55c129b310525f7181b59d51)
- elem : [bt\_mesh\_comp](structbt__mesh__comp.md#ad3da0629db1cb423260aa202cab7f062)
- elem\_buf : [bt\_mesh\_comp\_p2\_record](structbt__mesh__comp__p2__record.md#ad310f8c8e3a167492a6e698336b7f400)
- elem\_count : [bt\_mesh\_comp](structbt__mesh__comp.md#aff69499c7ac2c1ba643c946c75aa21ce), [bt\_mesh\_dev\_capabilities](structbt__mesh__dev__capabilities.md#acfef4ecf5ca9324ddc584b9cb910bfe0)
- elem\_idx : [bt\_mesh\_model::bt\_mesh\_model\_rt\_ctx](structbt__mesh__model_1_1bt__mesh__model__rt__ctx.md#aca9b558516b929a0b88d8171027e7c71)
- elem\_offset : [bt\_mesh\_comp2\_record](structbt__mesh__comp2__record.md#a6f81d99a62252cd26d87ca4fb289bdf9), [bt\_mesh\_comp\_p1\_item\_long](structbt__mesh__comp__p1__item__long.md#a12a0e2fb373e2e43b7c04a1130cdf018), [bt\_mesh\_comp\_p1\_item\_short](structbt__mesh__comp__p1__item__short.md#a1fb6c8134a2c02e3b83dfea12ab39410)
- elem\_offset\_cnt : [bt\_mesh\_comp2\_record](structbt__mesh__comp2__record.md#ad13066e9d6d32e8e2eab64881249eb7e)
- element\_descr : [json\_obj\_descr](structjson__obj__descr.md#a0a459bf5ad8a210395fe80c5edd72d93)
- element\_id\_high : [ieee802154\_header\_ie](structieee802154__header__ie.md#a8521084dddda0853d3711d5b0dc1eada)
- element\_id\_low : [ieee802154\_header\_ie](structieee802154__header__ie.md#ab389f739b6e6f77add4f77786f8c0577)
- elems : [bt\_mesh\_dfu\_metadata](structbt__mesh__dfu__metadata.md#ac487e125632b55b8477f648759dbbba0)
- elevation : [gnss\_satellite](structgnss__satellite.md#a3d99c5ad18242a42f95b5de496ca501d)
- enable : [bt\_bap\_unicast\_client\_cb](structbt__bap__unicast__client__cb.md#a15dd1277b37dcd96a545bb6d450c2f9d), [bt\_bap\_unicast\_server\_cb](structbt__bap__unicast__server__cb.md#a7424079675204fba02339ddc661b77c5), [bt\_hci\_cp\_le\_conn\_cte\_req\_enable](structbt__hci__cp__le__conn__cte__req__enable.md#aaf38e3d5664d81ae7ac8d3b1bb03c646), [bt\_hci\_cp\_le\_conn\_cte\_rsp\_enable](structbt__hci__cp__le__conn__cte__rsp__enable.md#ae5eaaae211732d772ea53f3936ab32d2), [bt\_hci\_cp\_le\_set\_addr\_res\_enable](structbt__hci__cp__le__set__addr__res__enable.md#ad0548178cbc9bc2db54612a748a2bd65), [bt\_hci\_cp\_le\_set\_adv\_enable](structbt__hci__cp__le__set__adv__enable.md#a15e92d187d586fef560adf9c793f776a), [bt\_hci\_cp\_le\_set\_ext\_adv\_enable](structbt__hci__cp__le__set__ext__adv__enable.md#ab7148b47bf052d8cba1f6bf3385051c8), [bt\_hci\_cp\_le\_set\_ext\_scan\_enable](structbt__hci__cp__le__set__ext__scan__enable.md#a922d0c5a7ccb6c1e1864f662227b8307), [bt\_hci\_cp\_le\_set\_per\_adv\_enable](structbt__hci__cp__le__set__per__adv__enable.md#afff649b908264c617b249bcfbebadd53), [bt\_hci\_cp\_le\_set\_per\_adv\_recv\_enable](structbt__hci__cp__le__set__per__adv__recv__enable.md#a2187ec96822726daa5e43e910cc41cc3), [bt\_hci\_cp\_le\_set\_scan\_enable](structbt__hci__cp__le__set__scan__enable.md#a5e429a0b11be1493515803a360932b06), [bt\_hci\_cp\_mesh\_set\_scanning](structbt__hci__cp__mesh__set__scanning.md#aed23ad3e51e459bbc86945576a8113ef), [bt\_hci\_cp\_vs\_set\_scan\_req\_reports](structbt__hci__cp__vs__set__scan__req__reports.md#ac99b6b1fee39a2330c6d0c214c737fd3), [bt\_hci\_cp\_vs\_set\_trace\_enable](structbt__hci__cp__vs__set__trace__enable.md#a5676627500b6c5aff5986c53a0ba13a7), [ethernet\_t1s\_param](structethernet__t1s__param.md#add2f6115780c775a41da034443878955), [i3c\_config\_target](structi3c__config__target.md#abbfb2e5c4d061b60f3e0f92ee17f4ee7), [k\_obj\_core\_stats\_desc](structk__obj__core__stats__desc.md#aabc9df81e93aa0ff0ec84983dd07f58f), [net\_l2](structnet__l2.md#a5d42c51eb8dc4d6a990aa9ff88a66b94), [npcx\_ex\_ops\_qspi\_oper\_in](structnpcx__ex__ops__qspi__oper__in.md#afc12bebd886ba71fc9431cedf0765c24), [offloaded\_if\_api](structoffloaded__if__api.md#aadf471a8e3ae22f3294df1cab090a7a3), [shared\_irq\_driver\_api](structshared__irq__driver__api.md#a5a4ef3888a3d35497c47b67f4511fd5e), [shell\_transport\_api](structshell__transport__api.md#a95535c7195088e68230ecb306f105713), [udc\_api](structudc__api.md#af8b916f6b8c211ad82ddcfdaa12de5ae), [usbc\_vbus\_driver\_api](structusbc__vbus__driver__api.md#a5a7e6383279dc17c01d478a063efcac0), [usbd\_class\_api](structusbd__class__api.md#a03585c10422b27cf7712cc88e99a5fc2)
- enable\_interrupt : [sdhc\_driver\_api](structsdhc__driver__api.md#a42941f226f2adfe5b8275923bff434ff)
- enable\_txtime : [ethernet\_txtime\_param](structethernet__txtime__param.md#a74b1e05cf0fac8aa435ba966e110ae27)
- enabled : [bt\_mesh\_priv\_beacon](structbt__mesh__priv__beacon.md#ac38424ed4ebcd69307568763ff2d6ffb), [ethernet\_qav\_param](structethernet__qav__param.md#a031d3896b14eb8b32c3c050738421b85), [ethernet\_qbu\_param](structethernet__qbu__param.md#a9717dd68adde62a454593d72fdbc43a5), [ethernet\_qbv\_param](structethernet__qbv__param.md#a0742dbe52f01addbb319e2fcb354d064), [ieee802154\_config](structieee802154__config.md#ad9361f9ba1652e46d0be25e0de39afdf), [udc\_ep\_stat](structudc__ep__stat.md#a448c82eb3884dba20e1bdf0980d3a2b3), [usbd\_status](structusbd__status.md#a2382fcb655fe51e0bcf83f85aa182ba3), [wifi\_ps\_params](structwifi__ps__params.md#abb22aaa45833ac130922204bd2fe841b), [zbus\_observer\_data](structzbus__observer__data.md#ad16ca7a9e83f54afd75f6accf471eb91)
- enc\_data : [bt\_hci\_rp\_le\_encrypt](structbt__hci__rp__le__encrypt.md#ac20cd9f4ceffea6999114f65437aefdc)
- enc\_key\_size : [bt\_security\_info](structbt__security__info.md#a6567ffb82b7fa8093cc57ef4662873ba)
- encr\_enabled : [bt\_hci\_evt\_conn\_complete](structbt__hci__evt__conn__complete.md#a975617e8b568675a3ed8883cbe411557)
- encrypt : [bt\_cap\_unicast\_to\_broadcast\_param](structbt__cap__unicast__to__broadcast__param.md#ae8ebc736ab9a00ab3ed6e997e2806262), [bt\_hci\_cp\_set\_conn\_encrypt](structbt__hci__cp__set__conn__encrypt.md#aa259563efd49d04a8886f74169fd30b1), [bt\_hci\_evt\_encrypt\_change](structbt__hci__evt__encrypt__change.md#a61cc0e3c209acbb289d071515b44860a)
- encrypt\_change : [bt\_l2cap\_chan\_ops](structbt__l2cap__chan__ops.md#a12f3290f9bd04fb5fe562c620dff6984)
- encrypt\_state : [bt\_bap\_scan\_delegator\_add\_src\_param](structbt__bap__scan__delegator__add__src__param.md#a502d263982995c99559714f07d74443f), [bt\_bap\_scan\_delegator\_mod\_src\_param](structbt__bap__scan__delegator__mod__src__param.md#aecc8b74632dcb2b17b9a358e00c75d31), [bt\_bap\_scan\_delegator\_recv\_state](structbt__bap__scan__delegator__recv__state.md#ac770a5ad001f73d3acaf2b36827f9343)
- encryption : [bt\_bap\_broadcast\_source\_param](structbt__bap__broadcast__source__param.md#a7552bf9a4ff5441b13669effe23abb8c), [bt\_cap\_initiator\_broadcast\_create\_param](structbt__cap__initiator__broadcast__create__param.md#a4432bee0e365c189996b9f70c7226542), [bt\_hci\_cp\_le\_big\_create\_sync](structbt__hci__cp__le__big__create__sync.md#a482edf3326e2dd720b14a03609c1256a), [bt\_hci\_cp\_le\_create\_big](structbt__hci__cp__le__create__big.md#a490bd68d137f8cf60ea2ccd5ea4495e9), [bt\_hci\_cp\_le\_create\_big\_test](structbt__hci__cp__le__create__big__test.md#a50c4308abda01581b436b7867304e982), [bt\_hci\_evt\_le\_biginfo\_adv\_report](structbt__hci__evt__le__biginfo__adv__report.md#ae63eaf93f728109b5fb77ca3179ba99c), [bt\_iso\_big\_create\_param](structbt__iso__big__create__param.md#a1288fa2a8f6bb3e2ab26729e245277e1), [bt\_iso\_big\_sync\_param](structbt__iso__big__sync__param.md#a8e5cffe8960477e7f64707d7dd4191f6), [bt\_iso\_biginfo](structbt__iso__biginfo.md#a7d54ecb896c0d6bc590311d5d5a3ac7b)
- end : [bt\_mesh\_blob\_cli\_cb](structbt__mesh__blob__cli__cb.md#a60bc49eab376b055a8c21099f86fdde7), [bt\_mesh\_blob\_srv\_cb](structbt__mesh__blob__srv__cb.md#af7b6f557f38c15a174a2a75d1210dab3), [bt\_mesh\_dfu\_srv\_cb](structbt__mesh__dfu__srv__cb.md#a822ed15f15286ad4c5ce69009349f6cf), [bt\_mesh\_send\_cb](structbt__mesh__send__cb.md#aa169dbec8c96fd41a35616c009604685), [gdb\_mem\_region](structgdb__mem__region.md#a16001ef766b3c5775c1d1b2c59575b74), [json\_lexer](structjson__lexer.md#aeaf5743a9285e0aef9df99f9b3b48320), [json\_token](structjson__token.md#abb55042d9343358e85311ea52cacb963), [nxp\_mpu\_region](structnxp__mpu__region.md#aa983eb7eab91684bbd4748aad8157de6), [sys\_winstream](structsys__winstream.md#a6b80cf715e4a3ca7b7b74b9efd150a23), [x86\_memmap\_exclusion](structx86__memmap__exclusion.md#a7ea16f8f0e3672b02cddfbcb7e402f7f), [xtensa\_mmu\_range](structxtensa__mmu__range.md#abc812bf633710dee5a8dcb19c522ad3f)
- end\_handle : [bt\_aics\_discover\_param](structbt__aics__discover__param.md#ab2931e7c4a627e717d943b2907b264cb), [bt\_gatt\_discover\_params](structbt__gatt__discover__params.md#a225868498c34411cc3fc2be8e678e85e), [bt\_gatt\_include](structbt__gatt__include.md#a54d20cebfd6ba62b692c363acdc25d61), [bt\_gatt\_read\_params](structbt__gatt__read__params.md#a8b2a2b912efe557e24276a654087e75c), [bt\_gatt\_service\_val](structbt__gatt__service__val.md#a75b6fcf0f9f29ad05ccac0e83bcb31b7), [bt\_gatt\_subscribe\_params](structbt__gatt__subscribe__params.md#af806d24aa97db1f2e9a021e719598a6d), [bt\_ots\_client](structbt__ots__client.md#a99727a6d064d79c3078a04b1d6d046db), [bt\_vocs\_discover\_param](structbt__vocs__discover__param.md#a3811da3035bb1f0ff5d290eb60fb2fda)
- ended : [bt\_mesh\_dfu\_cli\_cb](structbt__mesh__dfu__cli__cb.md#aa3c8985490a6b2bd6fcd81dff0132060)
- endpoint : [bt\_bap\_unicast\_client\_cb](structbt__bap__unicast__client__cb.md#ae473ecc92b5c02a29742d0ba0c51ef4a), [ipc\_rpmsg\_instance](structipc__rpmsg__instance.md#afd5e2760bead6932c052c03c1f7f29e5), [usb\_cfg\_data](structusb__cfg__data.md#adbd7a747db040b54d047c48bed2f50c3)
- enqueue : [video\_driver\_api](structvideo__driver__api.md#a4762a3f103ca5999e3d3f790bb74af75)
- enr : [stm32\_pclken](structstm32__pclken.md#a907fb7b42699bff79625e4332714eadf)
- entries : [pseudo\_descriptor](structpseudo__descriptor.md#ad21f2391c31085657551eabf92249b8c)
- entry : [k\_thread](structk__thread.md#a63d78888376893fe0bdb485c5f114e03), [shell\_cmd\_entry](unionshell__cmd__entry.md#a4abb8327df0e62f63432a05cc885f03d), [smf\_state](structsmf__state.md#a63ea395c90fa8118cf355e55e60cee26)
- ep : [bt\_bap\_stream](structbt__bap__stream.md#af871d28b2cca8e4deba66997badbeca2), [bt\_cap\_unicast\_audio\_start\_stream\_param](structbt__cap__unicast__audio__start__stream__param.md#aa9a13263d287a2ddb241a8dc13baeffb), [ipc\_rpmsg\_ept](structipc__rpmsg__ept.md#a43d1c7fc6091bc5ce1d782af1828a76a), [udc\_buf\_info](structudc__buf__info.md#a0a1c09f587d3f6847cb7ce77514a3321), [uhc\_transfer](structuhc__transfer.md#aaf664844dc9f1871cce3d38516c042ef)
- ep\_active : [usbd\_class\_data](structusbd__class__data.md#aad3c8f52393d6135532d25ee8f42950e)
- ep\_addr : [usb\_dc\_ep\_cfg\_data](structusb__dc__ep__cfg__data.md#aba57a59450c93db5935e2ca08c94aa8b), [usb\_ep\_cfg\_data](structusb__ep__cfg__data.md#aa87f676a577a8c1605bb9a8fa04f411c)
- ep\_assigned : [usbd\_class\_data](structusbd__class__data.md#ab60dc9c68368c5c918ea6d23eacfaf60)
- ep\_cb : [usb\_ep\_cfg\_data](structusb__ep__cfg__data.md#a5d03244508b6a58d9d0bfb896c2537d1)
- ep\_clear\_halt : [udc\_api](structudc__api.md#a923a684868721d0b7232c86eed15e121)
- ep\_dequeue : [udc\_api](structudc__api.md#a023fcfa0fa251dcadcb379347fe7531a)
- ep\_disable : [udc\_api](structudc__api.md#a1af05b484e9c9d1f2a0dbfb822f09c98)
- ep\_enable : [udc\_api](structudc__api.md#a27291ab4d2acda207f6a6a2313d50793)
- ep\_enqueue : [udc\_api](structudc__api.md#aa1d3dadf63cb156ce5346712e1c65069)
- ep\_halt : [usbd\_ch9\_data](structusbd__ch9__data.md#a504360b7cb11240a2fda68344f2e3b62)
- ep\_lut : [udc\_data](structudc__data.md#acc471b34bb24453377b1ae54d33fa415)
- ep\_mps : [usb\_dc\_ep\_cfg\_data](structusb__dc__ep__cfg__data.md#a497bc16439e98415f383a680a0c4d008)
- ep\_set\_halt : [udc\_api](structudc__api.md#adf2adaea90b53999d1e98756062a2050)
- ep\_try\_config : [udc\_api](structudc__api.md#a775a18f5555f1c518762ff7dc016559c)
- ep\_type : [usb\_dc\_ep\_cfg\_data](structusb__dc__ep__cfg__data.md#a689682e1df951fd2fd492dda5e03cf08)
- ept\_cfg : [icmsg\_me\_data\_t](structicmsg__me__data__t.md#aedeb458feb87b705f2af3464bcbc8a17)
- epts : [icmsg\_me\_data\_t](structicmsg__me__data__t.md#ae76a1543acaff158c768e726b8c460e5)
- er : [bt\_hci\_rp\_vs\_read\_key\_hierarchy\_roots](structbt__hci__rp__vs__read__key__hierarchy__roots.md#a62c6df2ac691c06f481189fb61b0f99c)
- erase : [flash\_driver\_api](structflash__driver__api.md#acaf3275b42cb048eca00818026f10f15), [img\_mgmt\_upload\_action](structimg__mgmt__upload__action.md#abe9c3503c6d58cf3b7ad637cd4fec852)
- erase\_size : [sd\_csd](structsd__csd.md#ab8d5ae38b19f7ea83b0856ad093c65cb)
- erase\_value : [flash\_parameters](structflash__parameters.md#a218b0cbc797572ce096d0d6f55475ff9)
- err : [bt\_df\_conn\_iq\_samples\_report](structbt__df__conn__iq__samples__report.md#ab6e31e979bba969a18804cf8c9b88f03), [mgmt\_evt\_op\_cmd\_arg](structmgmt__evt__op__cmd__arg.md#a7e7a469f944d27d92e25e42d56fa32d2), [udc\_buf\_info](structudc__buf__info.md#af1c92f1cdd6e0474a19f788140fdc573), [uhc\_transfer](structuhc__transfer.md#a11f002f91b1039c226b7c9feb8223e11)
- err\_info : [bt\_hci\_evt\_vs\_fatal\_error\_trace\_data](structbt__hci__evt__vs__fatal__error__trace__data.md#ae1efc729b0c079fa922dcfffab6cdfa6)
- error : [ccs811\_result\_type](structccs811__result__type.md#a00426f8ba17dcbf696b70a5adb6ff5a4), [ipc\_service\_cb](structipc__service__cb.md#ac40fd19ae5263f1880df1fe3dca55647), [tftp\_evt\_param](uniontftp__evt__param.md#a489485b84fa3e559b3065258cabfb205)
- error\_callback\_en : [dma\_config](structdma__config.md#a66d7fe742d6e1c1f2e58a49105892961)
- error\_code : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#a106553cd8345cd8179aa3e5b6d9a10b8)
- error\_details : [net\_stats\_eth](structnet__stats__eth.md#a922feddb17fc020371f1bcc52c709415)
- errorCode : [nanoEsf](structnanoEsf.md#ae3b485a947962361d91ee59786d46b93)
- errors : [net\_stats\_eth](structnet__stats__eth.md#a9c869740f416fbe0b54d7fefacb1fe29), [net\_stats\_wifi](structnet__stats__wifi.md#ae0149e64a94a9f96eb6680f94793c8c4)
- es : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#a23a3d136237cf2db7a49a538e9cbb5c1), [nanoEsf](structnanoEsf.md#a61d97934f9586b15ef9082ff57317362), [task\_state\_segment](structtask__state__segment.md#a6fa263ba438e73c765619549082a9c6b)
- esc\_state : [smp\_shell\_data](structsmp__shell__data.md#aea6798b62094c9d3bcc3dc6926800af4)
- esi : [can\_mcan\_rx\_fifo\_hdr](structcan__mcan__rx__fifo__hdr.md#a746f7f80e30ac574fcb785e78cbcdf44), [can\_mcan\_tx\_buffer\_hdr](structcan__mcan__tx__buffer__hdr.md#ae30ffd52da3ea38188fa04ace20054ad), [can\_mcan\_tx\_event\_fifo](structcan__mcan__tx__event__fifo.md#a796967d04c60cd9cf423d904c6118944), [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#aa174bfc58d6f4bd0aa10e48139aae073), [nanoEsf](structnanoEsf.md#aff8554d808df765988252674e89d7bef), [task\_state\_segment](structtask__state__segment.md#a23f6ba3c3c80d83eabb3e4981a684f86)
- esp : [gdb\_interrupt\_ctx](structgdb__interrupt__ctx.md#a8284780b26c1ba6fd3117fc1f5a1ea1f), [nanoEsf](structnanoEsf.md#ab872f78692b5e2145fc891880558238d), [task\_state\_segment](structtask__state__segment.md#af439750f77fd6067776fd24c13443fde)
- esp0 : [task\_state\_segment](structtask__state__segment.md#ae613a01ad49d8aaa43fb955cf95e1de1)
- esp1 : [task\_state\_segment](structtask__state__segment.md#a9f656f69a3e9cd7d74e2e5c27a0c4d79)
- esp2 : [task\_state\_segment](structtask__state__segment.md#a1cb20df4a49a73a2d0b88a8df19621c2)
- espi : [emul::bus](unionemul_1_1bus.md#adbf407e15fbfe3da70b0c458e8edcf8d)
- espi\_api : [emul\_espi\_driver\_api](structemul__espi__driver__api.md#a829c405693c4ef7f558004bc8106342b)
- established : [bt\_mesh\_friend\_cb](structbt__mesh__friend__cb.md#a824ed814a46a3954d2c6f669c8900156), [bt\_mesh\_lpn\_cb](structbt__mesh__lpn__cb.md#a74b8b398b383518af069266cf3b0be91)
- esync : [can\_mcan\_ext\_filter](structcan__mcan__ext__filter.md#a2e2c2d57015bf7aabbbe510660430bd7)
- et : [can\_mcan\_tx\_event\_fifo](structcan__mcan__tx__event__fifo.md#a23ff309d6fb887166da2290646df200c)
- eth\_if\_type : [ethernet\_context](structethernet__context.md#a81e35df9b1648c1e2dc6234bb2eb2d76)
- ethernet\_l2\_flags : [ethernet\_context](structethernet__context.md#a49f0358828531ab6e3cc398ebaf6f6f9)
- event : [heap\_listener](structheap__listener.md#a1ef2db791f5422fa7e6bb17c2b6bf247), [icmsg\_me\_data\_t](structicmsg__me__data__t.md#a9507ab4a6ef840977f798c594e2a42ae), [net\_socket\_service\_event](structnet__socket__service__event.md#a8246a87e2171474eb214bb8f909cb9bf), [pm\_device](structpm__device.md#aa8ed27c6c0cff89062922bedae4dca35)
- event\_callback : [mdm\_hl7800\_callback\_agent](structmdm__hl7800__callback__agent.md#adb1eb808c084c9afb6077b04aa1bb026)
- event\_cb : [lwm2m\_ctx](structlwm2m__ctx.md#ab01ec6be0effa24dde31363a476eccbb), [udc\_data](structudc__data.md#a9bb216d0c87b9ff4e2e99f0c3cfbb381), [uhc\_data](structuhc__data.md#afd1a0828a0ca3e397dba09fe38fd8050)
- event\_handler : [ieee802154\_config](structieee802154__config.md#a1558e71a1d5ab74990964ff4deabbdb7)
- event\_id : [mgmt\_callback](structmgmt__callback.md#a3dc18e5f7e3e00c1c05cc104bb1f3ab1)
- event\_mask : [bt\_hci\_cp\_vs\_set\_event\_mask](structbt__hci__cp__vs__set__event__mask.md#ad5883adb065f04e923ff64093c78949a), [net\_mgmt\_event\_callback](structnet__mgmt__event__callback.md#acd2d06e59f71b30e6d9089c165c4a589)
- events : [bt\_hci\_cp\_le\_set\_event\_mask](structbt__hci__cp__le__set__event__mask.md#af7de4823aca253f15e57f54ee9b3879e), [bt\_hci\_cp\_set\_event\_mask](structbt__hci__cp__set__event__mask.md#ab3af227511f47ee03f2d6aba8ae65c5d), [i3c\_ccc\_events](structi3c__ccc__events.md#ac34bcdae31cdc718eb54962d6b707320), [k\_event](structk__event.md#a54c6f5997132e88406ffa5bcc0a10b83), [shell\_ctx](structshell__ctx.md#abbbc94a651bfc56d5b0916e1516c3842), [zsock\_pollfd](structzsock__pollfd.md#a31929c24c64b58c6f7e443645352f67d)
- events\_page\_2 : [bt\_hci\_cp\_set\_event\_mask\_page\_2](structbt__hci__cp__set__event__mask__page__2.md#aacf1308d0892226e2c10216a07cd1fcc)
- eviction : [k\_mem\_paging\_stats\_t](structk__mem__paging__stats__t.md#aa8175953fd7fa0a5057069b73b930f3b)
- evt : [bt\_hci\_evt\_hdr](structbt__hci__evt__hdr.md#aba3aca89bfbe7e8cbd144765cb20fcea), [espi\_evt\_data\_kbc](structespi__evt__data__kbc.md#a55e94583f10481a2cdc34ad7ba388f2f)
- evt\_cb : [mqtt\_client](structmqtt__client.md#a44c515b8b25d59554990f6193217d83f), [mqtt\_sn\_client](structmqtt__sn__client.md#ac2b8e9d7d4c246c5d5538922a1e9887b)
- evt\_data : [espi\_event](structespi__event.md#aa0491cbed5bec091721dfa14898b7277)
- evt\_details : [espi\_event](structespi__event.md#aea36925bd3f599c1481c9cc867795c33)
- evt\_prefix : [bt\_hci\_rp\_mesh\_get\_opts](structbt__hci__rp__mesh__get__opts.md#af2f158774100ab0ca1537e69b3918eaa)
- evt\_prefix\_len : [bt\_hci\_rp\_mesh\_get\_opts](structbt__hci__rp__mesh__get__opts.md#af607a95cd367be6950a3185c2df2aca8)
- evt\_type : [bt\_hci\_evt\_le\_advertising\_info](structbt__hci__evt__le__advertising__info.md#a5943685ccd3491a883ba9450f700bb86), [bt\_hci\_evt\_le\_direct\_adv\_info](structbt__hci__evt__le__direct__adv__info.md#aed957c96860c5f92f9485ab743ce832b), [bt\_hci\_evt\_le\_ext\_advertising\_info](structbt__hci__evt__le__ext__advertising__info.md#a040c27dbcb337162f7ca857b8cb84cfe), [espi\_event](structespi__event.md#acac75eb1d2b384aa337a5240825b635f)
- evtchn : [hvc\_xen\_data](structhvc__xen__data.md#ace0cad3a06743f22e2e5e2d771f6b0e6)
- evtchn\_mask : [shared\_info](structshared__info.md#a45398e8bb0df581eedb48cd9902f811d)
- evtchn\_pending : [shared\_info](structshared__info.md#a7911652d7ce578705e852d4518d1abb9)
- evtchn\_pending\_sel : [vcpu\_info](structvcpu__info.md#a34f154443856775657a7ce8ef77a7156)
- evtchn\_upcall\_pending : [vcpu\_info](structvcpu__info.md#a36147b6f38a5398d4226ddcd1fd8b0e3)
- exception : [gdb\_ctx](structgdb__ctx.md#adba5c39e347abc419b365bab2a1a0999)
- exec\_cnt : [ztress\_context\_data](structztress__context__data.md#ae96b7b02d0c315bb126193a4f0ad2bdf)
- executable : [segment\_descriptor](structsegment__descriptor.md#a45ebb67e9b54d4780ec42861e13531fd)
- execute\_tuning : [sdhc\_driver\_api](structsdhc__driver__api.md#a6075f8ef38200e700ec133fbeb8c8121)
- exit : [smf\_state](structsmf__state.md#a2df810ca49fbb9438ee78317feaaf09b)
- exit\_dead\_battery\_mode : [usbc\_ppc\_drv](structusbc__ppc__drv.md#ac66444729d18d875432ac4d31610c1cc)
- exit\_latency\_us : [pm\_state\_info](structpm__state__info.md#a6fc8e0a78df78c7a28a0bc2a27292818)
- exp\_tab : [llext](structllext.md#a76cc3ef7989f2d4bfaeedadd05738de2)
- expected\_cte\_len : [bt\_hci\_cp\_le\_rx\_test\_v3](structbt__hci__cp__le__rx__test__v3.md#ad1a1082d27b8a10e25eebd347404637c)
- expected\_cte\_type : [bt\_hci\_cp\_le\_rx\_test\_v3](structbt__hci__cp__le__rx__test__v3.md#a55b5c4739e456167f17bf3899d096e61)
- expected\_orig\_ts : [sntp\_ctx](structsntp__ctx.md#a58bd69ad86d00183e32ed07a9fbebfdc)
- expected\_result : [ztest\_expected\_result\_entry](structztest__expected__result__entry.md#a74524b4da8fddbd64d526cfc5df72743)
- expected\_rx\_time : [ieee802154\_config](structieee802154__config.md#a8124aed4a4af36c0e21fd8f1b1c97e3e)
- exponent : [bt\_gatt\_cpf](structbt__gatt__cpf.md#a3690a86c942badb2d2698481b03e436d)
- ext : [can\_mcan\_callbacks](structcan__mcan__callbacks.md#ab29bb0963a78fcc68677ff5e4589f004), [spsc\_pbuf](structspsc__pbuf.md#a1319cdcb211031b9bb79f8b9cb0a3765)
- ext\_addr : [ieee802154\_config](structieee802154__config.md#a03d6ec1a371312961f3a1ee42e113bbf), [ieee802154\_context](structieee802154__context.md#a3dbbea6bef660e17b3bbf7c02a4672cc), [isotp\_msg\_id](structisotp__msg__id.md#a7b818e7c6dab02347b32bcc74dfc44a3)
- ext\_features : [bt\_hci\_rp\_read\_local\_ext\_features](structbt__hci__rp__read__local__ext__features.md#a669e8c6faa4e45f472e4f8a3ebb03050)
- ext\_id : [can\_mcan\_rx\_fifo\_hdr](structcan__mcan__rx__fifo__hdr.md#acdea19720ee1d76254b6e9931ffeca07), [can\_mcan\_tx\_buffer\_hdr](structcan__mcan__tx__buffer__hdr.md#ab4800365c1f2cd76c2e19c27b8d72956), [can\_mcan\_tx\_event\_fifo](structcan__mcan__tx__event__fifo.md#a3b4c61b9edcd1720235c3784131693d1), [isotp\_msg\_id](structisotp__msg__id.md#a3f9d4a6efd9b1c147f889a6396d7ef1c)
- ext\_item\_cnt : [bt\_mesh\_comp\_p1\_model\_item](structbt__mesh__comp__p1__model__item.md#ae019a211eafeb20f323ad97328d938f7)
- ext\_osc : [mcp7940n\_rtc\_control](structmcp7940n__rtc__control.md#a0319904e52ccb2ef1f90dcb2f1a63f25)
- extended : [ieee802154\_config](structieee802154__config.md#a55823097d62a69d0c92dc70fb4ff1dd5), [pd\_header](unionpd__header.md#a5750b964c12c3bc2d2523a64cb9eb7d0)
- extension\_time : [ethernet\_qbv\_param](structethernet__qbv__param.md#a76220e58aa31ae6cfd92268277716c7a)
- extent\_order : [xen\_memory\_reservation](structxen__memory__reservation.md#ad0acf08be6cf896b508744cc6398b6b6)
- extra\_samplings : [adc\_sequence\_options](structadc__sequence__options.md#a29f8ac4cdf6740f56bcd70a0a027e56a)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
